Bug 156544 - empty columns are deleted without change tracking
Summary: empty columns are deleted without change tracking
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords:
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2023-07-31 07:24 UTC by NISZ LibreOffice Team
Modified: 2023-08-03 09:51 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-07-31 07:24:09 UTC
Description:
If there are empty cells in the column, then the change tracking deletion empty cells are also congested, not just non-empty cells in the same column.

Steps to Reproduce:
1. Insert a table column with change tracking.
2. Delete one column whose cells are empty.

Actual Results:
Empty cells are also congested, not just non-empty cells in the same column.

Expected Results:
Empty cells will not be deleted.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e26aeb882dd236adf19679d5df9b7ba5da1ed226
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 László Németh 2023-08-01 11:00:59 UTC
When there are only empty cells in the columns, they are removed without change tracking in Record Changes mode, too.

Follow-up to Bug 156475.
Comment 2 Commit Notification 2023-08-01 15:23:04 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/33058b5dc47a140516669945efbdd30ea65138a6

tdf#156544 sw tracked table column: delete empty column

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-08-03 09:51:01 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/72cf81802b7a9c4ce64cf853a80f2660da5ee26e

tdf#156544 sw tracked table column: delete empty column

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.