tdf#156544 sw tracked table column: delete empty column

Empty table columns were removed without change tracking
in Record Changes mode, too.

Follow-up to commit fe43f5971dfd2a121634eea9e39c7ad0cf3f962a
"tdf#156475 sw tracked table column: delete empty cell".

Change-Id: I8154cb1c75cf793f5a60e8259a91dd779fc766e3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155153
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>